--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="⚡⚡⚡" />
+    <meta name="description" content="Spooding Web" />
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/thumbnail.png" />
     <meta property="og:site_name" content="Vite Boilerplate" />
-    <meta property="og:description" content="⚡⚡⚡" />
+    <meta property="og:description" content="Spooding Web" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <!-- 웹폰트 -->
@@ -20,7 +20,7 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard.css"
     />
-    <title>Vite Boilerplate</title>
+    <title>Spooding</title>
   </head>
   <body>
     <div id="root"></div>
