--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard.css"
     />
+    <!-- icon -->
+    <script src="https://kit.fontawesome.com/3b88ea5e82.js" crossorigin="anonymous"></script>
     <title>Spooding</title>
   </head>
   <body>
