--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap"
+      rel="stylesheet"
+    />
     <!-- icon -->
     <script src="https://kit.fontawesome.com/3b88ea5e82.js" crossorigin="anonymous"></script>
     <title>Spooding</title>
