--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/icons/spooding_icon_color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Spooding Web" />
+    <meta name="description" content="Spooding: Weather App" />
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/thumbnail.png" />
-    <meta property="og:site_name" content="Vite Boilerplate" />
+    <meta property="og:image" content="/icons/spooding_icon_color.png" />
+    <meta property="og:site_name" content="Spooding" />
     <meta property="og:description" content="Spooding Web" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
